<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_profile"
        android:checkableBehavior="none"
        android:visible="false"
        android:orderInCategory="0">
        <item
            android:id="@+id/drawer_item_edit_profile"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/drawer_title_edit_profile"
            android:orderInCategory="1"/>
        <item
            android:id="@+id/drawer_item_new_profile"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/drawer_title_new_profile"
            android:orderInCategory="1"/>

    </group>

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single"
        android:orderInCategory="2">
        <item
            android:checked="true"
            android:id="@+id/drawer_item_monitor"
            android:icon="@drawable/ic_av_timer_black_24dp"
            android:title="@string/drawer_title_monitor" />
        <item
            android:id="@+id/drawer_item_logger"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/drawer_title_logger"/>
        <item
            android:id="@+id/drawer_item_faults"
            android:icon="@drawable/ic_warning_black_24dp"
            android:title="@string/drawer_title_faults"/>
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none"
        android:orderInCategory="3">
        <item
            android:id="@+id/drawer_item_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/drawer_title_settings"/>
        <item
            android:id="@+id/drawer_item_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/drawer_title_help" />
    </group>

</menu>