<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Units">
    <ListPreference
        android:title="Distance"
        android:summary="%s"
        android:key="pref_units_distance"
        android:entries="@array/pref_units_distance_entries"
        android:entryValues="@array/pref_units_distance_values"
        android:defaultValue="@string/pref_units_distance_default"/>
    <ListPreference
        android:title="Weight"
        android:summary="%s"
        android:key="pref_units_weight"
        android:entries="@array/pref_units_weight_entries"
        android:entryValues="@array/pref_units_weight_values"
        android:defaultValue="@string/pref_units_weight_default"/>
    <ListPreference
        android:title="Volume"
        android:summary="%s"
        android:key="pref_units_volume"
        android:entries="@array/pref_units_volume_entries"
        android:entryValues="@array/pref_units_volume_values"
        android:defaultValue="@string/pref_units_volume_default"/>
    <ListPreference
        android:title="Temperature"
        android:summary="%s"
        android:key="pref_units_temperature"
        android:entries="@array/pref_units_temperature_entries"
        android:entryValues="@array/pref_units_temperature_values"
        android:defaultValue="@string/pref_units_temperature_default"/>
    <ListPreference
        android:title="Pressure"
        android:summary="%s"
        android:key="pref_units_pressure"
        android:entries="@array/pref_units_pressure_entries"
        android:entryValues="@array/pref_units_pressure_values"
        android:defaultValue="@string/pref_units_pressure_default"/>
    <ListPreference
        android:title="Torque"
        android:summary="%s"
        android:key="pref_units_torque"
        android:entries="@array/pref_units_torque_entries"
        android:entryValues="@array/pref_units_torque_values"
        android:defaultValue="@string/pref_units_torque_default"/>
    <ListPreference
        android:title="Power"
        android:summary="%s"
        android:key="pref_units_power"
        android:entries="@array/pref_units_power_entries"
        android:entryValues="@array/pref_units_power_values"
        android:defaultValue="@string/pref_units_power_default"/>
</PreferenceScreen>